--- a/sample.yaml
+++ b/sample.yaml
@@ -2,21 +2,21 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sampleapp
+  name: sample
   labels:
-    app: sampleapp
+    app: sample
 spec:
   type: LoadBalancer
   ports:
     - port: 8081
       name: http
   selector:
-    app: sampleapp
+    app: sample
 ---
 apiVersion: extensions/v1beta1 #TODO: Migrate to apps/v1
 kind: Deployment
 metadata:
-  name: sampleapp-v1
+  name: sample-v1
 spec:
   replicas: 1
   minReadySeconds: 10 # Wait 2 seconds after each new pod comes up before marked as "ready"
@@ -28,11 +28,11 @@ spec:
   template:
     metadata:
       labels:
-        app: sampleapp
+        app: sample
         version: v1
     spec:
       containers:
-        - name: sampleapp
+        - name: sample
           image: andrebriggs/goserver:v1.2
           #image: scopcomcr.azurecr.io/copo-common-service-dev2:latest
           imagePullPolicy: IfNotPresent
