--- a/role-dev-namespace.yaml
+++ b/role-dev-namespace.yaml
@@ -1,15 +1,13 @@
-
-kind: Role
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: dev-user-full-access
-  namespace: dev
-rules:
-- apiGroups: ["", "extensions", "apps"]
-  resources: ["*"]
-  verbs: ["*"]
-- apiGroups: ["batch"]
-  resources:
-  - jobs
-  - cronjobs
-  verbs: ["*"]
+	kind: RoleBinding
+	apiVersion: rbac.authorization.k8s.io/v1beta1
+	metadata:
+	  name: dev-user-access
+	  namespace: dev
+	roleRef:
+	  apiGroup: rbac.authorization.k8s.io
+	  kind: Role
+	  name: dev-user-full-access
+	subjects:
+	- kind: Group
+	  namespace: dev
+	  name: $groupObjectId
